# granola-sync

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml
app/GranolaSync/App/: AppDelegate.swift  AppState.swift  GranolaSyncApp.swift
app/GranolaSync/Models/: ExportManifest.swift  ExportResult.swift  MeetingDetail.swift  MeetingSummary.swift  SyncConfig.swift  SyncSchedule.swift  SyncStats.swift
app/GranolaSync/Resources/: AppIcon.icns
app/GranolaSync/Services/: ConfigService.swift  LaunchdService.swift  PythonBridge.swift  StatusChecker.swift
app/GranolaSync/Views/Components/: BottomButton.swift  ExportButton.swift  InfoRow.swift  MeetingRow.swift  StatusRow.swift
app/GranolaSync/Views/MenuBar/: MenuBarPopover.swift
app/GranolaSync/Views/Setup/: CompleteStep.swift  DetectGranolaStep.swift  DrivePickerStep.swift  ScheduleStep.swift  SetupWizardView.swift  WelcomeStep.swift
app/GranolaSync/Views/Window/: AboutView.swift  DashboardView.swift  ExportHistoryView.swift  LogViewerView.swift  MainWindow.swift  MeetingBrowserView.swift  (+2 more)
homebrew/: granola-sync.rb
python/: pyproject.toml
python/src/granola_sync/: __init__.py  __main__.py  api.py  auth.py  cache.py  cli.py  config.py  docx_builder.py  exporter.py  html_parser.py  launchd.py  manifest.py  markdown_builder.py  notifications.py  stats.py  text_builder.py  utils.py
python/tests/: test_cache.py  test_config.py  test_html_parser.py  test_manifest.py  test_stats.py  test_utils.py
scripts/: bundle-python.sh  create-dmg.sh  install.sh  release.py  setup-python.sh
